# AssistantWebserver

./: .dockerignore  .env.build.template  .gitignore  Dockerfile  Dockerfile.nordhome  QUICK_START_REVERSE_PROXY.md  README.md  REVERSE_PROXY_SETUP_SUMMARY.md  api_overview.md  client_example.py  generate_keys.py  get_tidal_creds.py  load-env.bat  load-env.ps1  pyproject.toml  setup_ecs_env.py
docs/: REVERSE_PROXY_CONFIGURATION.md  SOCKETIO_EVENTS.md  TIDAL_AUTH_API.md  TIDAL_AUTH_QUICKSTART.md  TOOLS.md
webserver/: config.py  logger_config.py  main.py  models.json
webserver/ai/: aw_aisuite.py
webserver/api/: dependencies.py
webserver/api/api_v1/: router.py
webserver/api/api_v1/endpoints/: aisuitellm.py  auth.py  chat.py  local_live.py  model.py  openai_api.py  prompt_compiler.py  run.py  sbllm.py  tidal_auth.py  user.py
webserver/api/api_v1/middleware/: authentication.py
webserver/api/internal/: __init__.py  router.py
webserver/api/internal/endpoints/: __init__.py  health.py
webserver/db/assistantdb/: auth_models.py  aws_aurora_init.sql  connection.py  model.py
webserver/db/chatdb/: connection.py  db.py  models.py  queries.py  utils.py  uuid_utils.py
webserver/db/memcache/: connection.py
webserver/middleware/: server_exceptions.py
webserver/models/: chat.py
webserver/sbsocketio/: README.md  __init__.py  assistant_room.py  assistant_room_aisuite.py  assistant_room_manager.py  assistant_room_openai_realtime.py  connection_manager.py  room_manager.py  router.py  socketio_app.py
webserver/sbsocketio/models/: models_assistant_chat.py
webserver/sbsocketio/namespaces/: assistant_realtime.py  base.py  default.py
webserver/static/: tidal_auth_test.html
webserver/tools/: README.md  brightdata_search.py  brightdata_search_tool.py  finance.py  google_calendar_helper.py  notion.py  perplexity.py  sensor_values.py  spotify.py  stocks.py  tidal.py
webserver/util/: README_s3.md  file_conversions.py  models.py  s3.py  s3_config_example.py  s3_examples.py  spotify_aws_ssm_cache.py  websocket_session_manager.py
